<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".QrCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/barcode_amp_qr_code_scanner"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:filterTouchesWhenObscured="true"
                android:id="@+id/cameraBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera"
                android:layout_marginEnd="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:filterTouchesWhenObscured="true"
                android:id="@+id/chooseBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_in_library"/>

        </LinearLayout>

        <ImageView
            android:filterTouchesWhenObscured="true"
            android:id="@+id/imgView"
            android:src="@drawable/ic_launcher_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <com.google.android.material.button.MaterialButton
            android:filterTouchesWhenObscured="true"
            android:id="@+id/scanBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

        <TextView
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

        <TextView
            android:filterTouchesWhenObscured="true"
            android:id="@+id/resultTv"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</ScrollView>