<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessActivity"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:filterTouchesWhenObscured="true"
            android:textSize="18dp"
            android:id="@+id/otp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/hello"
            android:textStyle="bold"/>


        <TextView
            android:filterTouchesWhenObscured="true"
            android:layout_marginTop="10dp"
            android:id="@+id/resend"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="20dp"/>

        <Button
            android:filterTouchesWhenObscured="true"
            android:layout_marginTop="10dp"
            android:id="@+id/submmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"/>

    </LinearLayout>


</LinearLayout>