<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SmsverifyActivity">

    <LinearLayout
        android:id="@+id/phonelayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:filterTouchesWhenObscured="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:hint="@string/xxx_xxx_xxx"
                android:paddingStart="5dp"
                android:background="#fff"
                android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:filterTouchesWhenObscured="true"
            android:id="@+id/submit"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/requestOtp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:filterTouchesWhenObscured="true"
                android:id="@+id/otp"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:hint="@string/enter_otp_code"
                android:paddingStart="5dp"
                android:background="#fff"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:layout_margin="10dp"
            android:id="@+id/description"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_otp_code"
            android:textSize="20dp"/>

        <TextView
            android:filterTouchesWhenObscured="true"
            android:layout_margin="10dp"
            android:id="@+id/resend"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <Button
            android:filterTouchesWhenObscured="true"
            android:id="@+id/submmit"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/submit"/>

    </LinearLayout>

</LinearLayout>