<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center|bottom">

            <View
                android:id="@+id/view01"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_view_gray_oval"/>
            <View
                android:id="@+id/view02"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bg_view_gray_oval"/>
            <View
                android:id="@+id/view03"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bg_view_gray_oval"/>
            <View
                android:id="@+id/view04"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bg_view_gray_oval"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_1"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_2"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn3"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_3"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn4"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_4"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn5"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_5"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn6"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_6"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn7"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_7"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn8"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_8"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn9"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_9"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btnback"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_search"
                    android:paddingLeft="55dip"
                    />
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btn0"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/_0"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btnclear"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:text="@string/clear"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>